Fiz spacing issues

--- a/css/menikah.css
+++ b/css/menikah.css
@@ -314,7 +314,7 @@ html {
   text-transform: uppercase;
   font-size: 1.5rem;
   letter-spacing: 0px;
-  padding-bottom: 60px;
+  /* padding-bottom: 60px; */
 }
 
 .nama-lengkap {
